Get Sorted Locations Endpoint
