# routes/api.php
@@ -16,7 +16,8 @@ use Illuminate\Support\Facades\Route;
 */
 
 Route::middleware(['throttle:20,1'])->group(function () {
-    Route::post('/addLocation', [LocationController::class, 'addLocation']);
+    Route::post('/add-location', [LocationController::class, 'addLocation']);
     Route::get('/location/{id}', [LocationController::class, 'locationDetails']);
     Route::get('/locations', [LocationController::class, 'getAllLocations']);
+    Route::post('/sorted-locations', [LocationController::class, 'listLocationsSortedByDistance']);
 });
