# storage/api-docs/api-docs.json
@@ -6,14 +6,14 @@
         "version": "1.0"
     },
     "paths": {
-        "/api/addLocation": {
+        "/api/add-location": {
             "post": {
                 "tags": [
                     "Location"
                 ],
                 "summary": "Add a new location",
                 "description": "Add a new location\n\nThis endpoint allows you to add a new location by providing latitude, longitude, name, and marker color.",
-                "operationId": "25a27771948ed598071276804b1934d8",
+                "operationId": "4b4f7a6e87e713637d56b60a78ac452d",
                 "requestBody": {
                     "required": true,
                     "content": {
@@ -48,7 +48,47 @@
                         "content": {
                             "application/json": {
                                 "schema": {
-                                    "$ref": "#/components/schemas/Location"
+                                    "properties": {
+                                        "success": {
+                                            "type": "boolean",
+                                            "example": true
+                                        },
+                                        "message": {
+                                            "type": "string",
+                                            "example": "Location added successfully"
+                                        },
+                                        "location": {
+                                            "$ref": "#/components/schemas/Location"
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    },
+                    "442": {
+                        "description": "Validation Error",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "success": {
+                                            "type": "boolean",
+                                            "example": false
+                                        },
+                                        "errors": {
+                                            "type": "object",
+                                            "example": {
+                                                "latitude": [
+                                                    "The latitude field is required."
+                                                ],
+                                                "longitude": [
+                                                    "The longitude field is required."
+                                                ]
+                                            }
+                                        }
+                                    },
+                                    "type": "object"
                                 }
                             }
                         }
@@ -79,7 +119,19 @@
                         "content": {
                             "application/json": {
                                 "schema": {
-                                    "$ref": "#/components/schemas/Location"
+                                    "properties": {
+                                        "success": {
+                                            "type": "boolean",
+                                            "example": true
+                                        },
+                                        "locations": {
+                                            "type": "array",
+                                            "items": {
+                                                "$ref": "#/components/schemas/Location"
+                                            }
+                                        }
+                                    },
+                                    "type": "object"
                                 }
                             }
                         }
@@ -122,6 +174,10 @@
                             "application/json": {
                                 "schema": {
                                     "properties": {
+                                        "success": {
+                                            "type": "boolean",
+                                            "example": true
+                                        },
                                         "locations": {
                                             "type": "array",
                                             "items": {
@@ -156,6 +212,89 @@
                                                 }
                                             },
                                             "type": "object"
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    }
+                }
+            }
+        },
+        "/api/sorted-locations": {
+            "post": {
+                "tags": [
+                    "Location"
+                ],
+                "summary": "Get all locations sorted by distance.",
+                "description": "Get a list of all locations sorted by distance from a specified point.",
+                "operationId": "184c7131d05133f51197e9a6853fe814",
+                "requestBody": {
+                    "required": true,
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "properties": {
+                                    "latitude": {
+                                        "type": "number",
+                                        "format": "float",
+                                        "example": 40.748817
+                                    },
+                                    "longitude": {
+                                        "type": "number",
+                                        "format": "float",
+                                        "example": -73.985428
+                                    }
+                                },
+                                "type": "object"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "200": {
+                        "description": "Success",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "success": {
+                                            "type": "boolean",
+                                            "example": true
+                                        },
+                                        "locations": {
+                                            "type": "array",
+                                            "items": {
+                                                "$ref": "#/components/schemas/Location"
+                                            }
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    },
+                    "442": {
+                        "description": "Validation Error",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "success": {
+                                            "type": "boolean",
+                                            "example": false
+                                        },
+                                        "errors": {
+                                            "type": "object",
+                                            "example": {
+                                                "latitude": [
+                                                    "The latitude field is required."
+                                                ],
+                                                "longitude": [
+                                                    "The longitude field is required."
+                                                ]
+                                            }
                                         }
                                     },
                                     "type": "object"
